<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Purple</string>
    <string name="hello_world">Hello world!</string>
    
    <string-array name="menu_main_spinner">
        <item>Inbox</item>
        <item>Texts</item>
        <item>Calls</item>
        <item>Trash</item>
    </string-array>
    
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_support">Support</string>
    <string name="menu_compose">Compose</string>
    <string name="menu_search">Search</string>

</resources>